--- a/simple_linear_regression.ipynb
+++ b/simple_linear_regression.ipynb
@@ -32,11 +32,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e420e99",
+   "id": "859ab86e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for google colab\n",
+    "## for google colab\n",
     "# import requests\n",
     "# from io import BytesIO\n",
     "# from PIL import Image\n",
@@ -102,7 +102,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "cfbea9b9",
+   "id": "b113bcb3",
    "metadata": {},
    "source": [
     "![ohm-law-circuit-diagram-with-instruments.png](attachment:ohm-law-circuit-diagram-with-instruments.png)"
@@ -111,11 +111,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4397941d",
+   "id": "4ac0933e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for google colab\n",
+    "## for google colab\n",
     "# import requests\n",
     "# from io import BytesIO\n",
     "# from PIL import Image\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80331866",
+   "id": "e2f1a4fc",
    "metadata": {},
    "source": [
     "Say we are experimentally verifying Ohm's Law $V = I R$, but we have a faulty potentiometer. This means that I have noisy measurements for the voltage $V$ and the current $I$. I have taken n = 75 measurements and I want to find an approximate value to the resistance. "
