added better support for images

--- a/simple_linear_regression.ipynb
+++ b/simple_linear_regression.ipynb
@@ -32,17 +32,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "859ab86e",
+   "id": "31360654",
    "metadata": {},
    "outputs": [],
    "source": [
     "## for google colab\n",
-    "# import requests\n",
-    "# from io import BytesIO\n",
-    "# from PIL import Image\n",
-    "# url = 'https://raw.githubusercontent.com/jAnirudh/SVNIT/main/starrynight.jpg'\n",
-    "# page = requests.get(url)\n",
-    "# Image.open(BytesIO(page.content))"
+    "#!git clone https://github.com/jAnirudh/SVNIT.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc9ffee6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import sys\n",
+    "# sys.path.insert(0,'/SVNIT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e7e0646",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Image.open('SVNIT/starrynight.jpg')"
    ]
   },
   {
@@ -102,7 +118,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "b113bcb3",
+   "id": "931f1717",
    "metadata": {},
    "source": [
     "![ohm-law-circuit-diagram-with-instruments.png](attachment:ohm-law-circuit-diagram-with-instruments.png)"
@@ -111,22 +127,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ac0933e",
+   "id": "2af9eaed",
    "metadata": {},
    "outputs": [],
    "source": [
     "## for google colab\n",
-    "# import requests\n",
-    "# from io import BytesIO\n",
-    "# from PIL import Image\n",
-    "# url = 'https://raw.githubusercontent.com/jAnirudh/SVNIT/main/ohm-law-circuit-diagram-with-instruments.png'\n",
-    "# page = requests.get(url)\n",
-    "# Image.open(BytesIO(page.content))"
+    "#Image.open('SVNIT/ohm-law-circuit-diagram-with-instruments.png')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e2f1a4fc",
+   "id": "112a5c66",
    "metadata": {},
    "source": [
     "Say we are experimentally verifying Ohm's Law $V = I R$, but we have a faulty potentiometer. This means that I have noisy measurements for the voltage $V$ and the current $I$. I have taken n = 75 measurements and I want to find an approximate value to the resistance. "
