added better support for images

--- a/simple_linear_regression.ipynb
+++ b/simple_linear_regression.ipynb
@@ -32,21 +32,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31360654",
+   "id": "c3db9db2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## for google colab\n",
-    "#!git clone https://github.com/jAnirudh/SVNIT.git"
+    "# # for google colab\n",
+    "# !git clone https://github.com/jAnirudh/SVNIT.git"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc9ffee6",
+   "id": "b53c381a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # for google colab\n",
     "# import sys\n",
     "# sys.path.insert(0,'/SVNIT')"
    ]
@@ -54,11 +55,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e7e0646",
+   "id": "709fd739",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Image.open('SVNIT/starrynight.jpg')"
+    "# # for google colab\n",
+    "# from PIL import Image\n",
+    "# Image.open('SVNIT/starrynight.jpg')"
    ]
   },
   {
@@ -118,7 +121,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "931f1717",
+   "id": "7d140251",
    "metadata": {},
    "source": [
     "![ohm-law-circuit-diagram-with-instruments.png](attachment:ohm-law-circuit-diagram-with-instruments.png)"
@@ -127,17 +130,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2af9eaed",
+   "id": "e88271fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## for google colab\n",
-    "#Image.open('SVNIT/ohm-law-circuit-diagram-with-instruments.png')"
+    "# # for google colab\n",
+    "# Image.open('SVNIT/ohm-law-circuit-diagram-with-instruments.png')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "112a5c66",
+   "id": "b8b4debe",
    "metadata": {},
    "source": [
     "Say we are experimentally verifying Ohm's Law $V = I R$, but we have a faulty potentiometer. This means that I have noisy measurements for the voltage $V$ and the current $I$. I have taken n = 75 measurements and I want to find an approximate value to the resistance. "
