added better support for images

--- a/simple_linear_regression.ipynb
+++ b/simple_linear_regression.ipynb
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3db9db2",
+   "id": "0af5036e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b53c381a",
+   "id": "0fd269a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,13 +55,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "709fd739",
+   "id": "f8cac1e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # for google colab\n",
     "# from PIL import Image\n",
-    "# Image.open('SVNIT/starrynight.jpg')"
+    "# Image.open('starrynight.jpg')"
    ]
   },
   {
@@ -121,7 +121,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "7d140251",
+   "id": "aaa84969",
    "metadata": {},
    "source": [
     "![ohm-law-circuit-diagram-with-instruments.png](attachment:ohm-law-circuit-diagram-with-instruments.png)"
@@ -130,17 +130,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e88271fa",
+   "id": "a100560d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # for google colab\n",
-    "# Image.open('SVNIT/ohm-law-circuit-diagram-with-instruments.png')"
+    "# Image.open('ohm-law-circuit-diagram-with-instruments.png')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b8b4debe",
+   "id": "208684db",
    "metadata": {},
    "source": [
     "Say we are experimentally verifying Ohm's Law $V = I R$, but we have a faulty potentiometer. This means that I have noisy measurements for the voltage $V$ and the current $I$. I have taken n = 75 measurements and I want to find an approximate value to the resistance. "
