test for importing module in colab

--- a/simple_linear_regression.ipynb
+++ b/simple_linear_regression.ipynb
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0af5036e",
+   "id": "e1bdbea7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fd269a0",
+   "id": "79eb5684",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,13 +55,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8cac1e5",
+   "id": "00635c58",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # for google colab\n",
     "# from PIL import Image\n",
-    "# Image.open('starrynight.jpg')"
+    "# Image.open('SVNIT/starrynight.jpg')"
    ]
   },
   {
@@ -121,7 +121,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "aaa84969",
+   "id": "1cdd0894",
    "metadata": {},
    "source": [
     "![ohm-law-circuit-diagram-with-instruments.png](attachment:ohm-law-circuit-diagram-with-instruments.png)"
@@ -130,17 +130,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a100560d",
+   "id": "5251c28f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # for google colab\n",
-    "# Image.open('ohm-law-circuit-diagram-with-instruments.png')"
+    "# Image.open('SVNIT/ohm-law-circuit-diagram-with-instruments.png')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "208684db",
+   "id": "e7dbf927",
    "metadata": {},
    "source": [
     "Say we are experimentally verifying Ohm's Law $V = I R$, but we have a faulty potentiometer. This means that I have noisy measurements for the voltage $V$ and the current $I$. I have taken n = 75 measurements and I want to find an approximate value to the resistance. "
@@ -154,7 +154,19 @@
    "outputs": [],
    "source": [
     "import numpy\n",
-    "import matplotlib.pyplot as plot\n",
+    "import matplotlib.pyplot as plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bf70c5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for google colab\n",
+    "import os\n",
+    "os.chdir('SVNIT')\n",
     "from ohmslaw import get_data, plot_figure"
    ]
   },
