minor change to SLR nb

--- a/simple_linear_regression.ipynb
+++ b/simple_linear_regression.ipynb
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcdbcb02",
+   "id": "011bd2ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da458539",
+   "id": "d405172f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c950e25e",
+   "id": "8be6faeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d33f5770",
+   "id": "01f80215",
    "metadata": {},
    "source": [
     "![ohm-law-circuit-diagram-with-instruments.png](attachment:ohm-law-circuit-diagram-with-instruments.png)"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1813c11f",
+   "id": "8ae69b8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eb124a3",
+   "id": "3f6f4c9f",
    "metadata": {},
    "source": [
     "Say we are experimentally verifying Ohm's Law $V = I R$, but we have a faulty potentiometer. This means that I have noisy measurements for the voltage $V$ and the current $I$. I have taken n = 75 measurements and I want to find an approximate value to the resistance. "
@@ -160,14 +160,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6d7d03f",
+   "id": "d865e672",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for google colab\n",
-    "import os\n",
-    "os.chdir('SVNIT')\n",
-    "from ohmslaw import get_data, plot_figure"
+    "# # for google colab\n",
+    "# import os\n",
+    "# os.chdir('SVNIT')\n",
+    "# from ohmslaw import get_data, plot_figure"
    ]
   },
   {
