another minor change in SLR nb

--- a/simple_linear_regression.ipynb
+++ b/simple_linear_regression.ipynb
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "011bd2ec",
+   "id": "de6565e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d405172f",
+   "id": "3ee1aebf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8be6faeb",
+   "id": "e64b4bec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "01f80215",
+   "id": "d637817e",
    "metadata": {},
    "source": [
     "![ohm-law-circuit-diagram-with-instruments.png](attachment:ohm-law-circuit-diagram-with-instruments.png)"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ae69b8d",
+   "id": "ffc2a02a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f6f4c9f",
+   "id": "2dba7408",
    "metadata": {},
    "source": [
     "Say we are experimentally verifying Ohm's Law $V = I R$, but we have a faulty potentiometer. This means that I have noisy measurements for the voltage $V$ and the current $I$. I have taken n = 75 measurements and I want to find an approximate value to the resistance. "
@@ -160,14 +160,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d865e672",
+   "id": "764b71d8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # for google colab\n",
     "# import os\n",
-    "# os.chdir('SVNIT')\n",
-    "# from ohmslaw import get_data, plot_figure"
+    "# os.chdir('SVNIT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d5d3fe3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ohmslaw import get_data, plot_figure"
    ]
   },
   {
