reading csv in colab

--- a/multiple_linear_regression_ARC_welding.ipynb
+++ b/multiple_linear_regression_ARC_welding.ipynb
@@ -18,12 +18,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f3c8dcd",
+   "id": "131f2153",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # for google colab\n",
+    "# !git clone https://github.com/jAnirudh/SVNIT.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f66f3c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.listdir('.') # list contents of current working directory "
+    "os.listdir('.') # list contents of current working directory \n",
+    "os.chdir('SVNIT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44a91717",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "pandas.read_csv('arc_welding.csv')"
    ]
   }
  ],
