minor modifications to MLR nb

--- a/multiple_linear_regression_ARC_welding.ipynb
+++ b/multiple_linear_regression_ARC_welding.ipynb
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2e4bd43",
+   "id": "75e8bc69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99e8fa40",
+   "id": "2475a039",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b05d010a",
+   "id": "39ad87ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "940f1d61",
+   "id": "4df05174",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c681f85",
+   "id": "e641c5e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26a03733",
+   "id": "c6ea6f66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cb35eef",
+   "id": "7863127a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2816e247",
+   "id": "ca9c50fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dad5825",
+   "id": "0ee343ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cc52f66",
+   "id": "e77055b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88076103",
+   "id": "540b50f4",
    "metadata": {
     "scrolled": true
    },
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ba795ac",
+   "id": "2e896f15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67a09bb1",
+   "id": "2c9cfa71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35e6c09b",
+   "id": "7f5fa0b0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -178,14 +178,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4683335f",
+   "id": "552977c7",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "9b18a9e3",
+   "id": "e3270ebe",
    "metadata": {},
    "source": [
     "### Let's do regression"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4799e2c8",
+   "id": "c6514eb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b37c70d9",
+   "id": "a605f4b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e4af958",
+   "id": "61e8b333",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,18 +229,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bf67159",
+   "id": "2c3b907e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# fit\n",
-    "model.fit(df[df.columns[:-1]], df[df.columns[-1]])"
+    "model.fit(X, Y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "974a71ec",
+   "id": "57cc93a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d4ce5d5",
+   "id": "315592ee",
    "metadata": {},
    "outputs": [],
    "source": [
